Fix broken favicon fetching for chrome://settings/siteData.

chrome://settings/siteData currently never ever shows proper favicons
for any site. The problem is that URLs on the page are listed without
schemes as site data is commonly hostname-bound. The scheme-less URL is
eventually passed to the WebUI FaviconSource, where it fails to parse
into a GURL, leading to a request to the Favicon Service for a favicon
for an empty URL. This request obviously fails and hence
chrome://settings/siteData never gets any favicons.

The fix is to always attach a scheme to the URL (defaulting to HTTP) if
one isn't there. Future work will update the Favicon Service to allow
hostname-bound querying, which will further improve the number of icons
fetched and displayed on this page.

BUG=798028

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I76c3fb0e921962618a5782c0559a1d6f334fd0bc